syntax = "proto3";

option go_package = "gitbub.com/uberstrate/idl";

import "google/protobuf/timestamp.proto";
import "common.proto";

package statestore;




// Define the NodeStatus message
message NodeStatus {
    // Node that the capacity of the node is inferred by NodeAgent in actual setting.
    Resource capacity = 1; // The capacity of the node
    string phase = 2; // The phase of the node (pending, running, terminated)
    string tainted = 3;
}

// Define the NodeSpec message
message NodeSpec {
}

// Define the Node message
message Node {
    ObjectType ot = 1; // The object type of the node

    Metadata metadata = 2; // The metadata of the node

    NodeSpec spec = 3; // The spec of the node

    NodeStatus status = 4; // The status of the node
}
